# openglpractice

./: CMakeLists.txt
include/glad/: glad.h
src/: application.cpp  glad.c
